# reproduction-rust-bench-regression

./: Cargo.toml  LICENSE.md  README.md
benches/: criterion.rs  divan.rs
src/: lib.rs
