[package]
name = "bench_regression"
version = "0.1.0"
edition = "2021"

[dependencies]
# real_blackbox does not improve the regression:
# https://bheisler.github.io/criterion.rs/book/user_guide/known_limitations.html
# criterion = { version = "0.5.1", features = ["real_blackbox"] }
criterion = "0.5.1"
fastrand = "2.0.1"

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "divan"
harness = false

[[bench]]
name = "criterion"
harness = false